07-nextcloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nextcloud-deployment
  labels:
    app.kubernetes.io/app: nextcloud
    app.kubernetes.io/env: develop
    app.kubernetes.io/owner: ahmad
    app.kubernetes.io/part-of: nextcloud

spec:
  selector:
    matchLabels:
      app.kubernetes.io/app: nextcloud
      app.kubernetes.io/env: develop
      app.kubernetes.io/owner: ahmad
      app.kubernetes.io/part-of: nextcloud
  replicas: 3
  template:
    metadata:
      name: nextcloud-pod
      labels:
        app.kubernetes.io/app: nextcloud
        app.kubernetes.io/env: develop
        app.kubernetes.io/owner: ahmad
        app.kubernetes.io/part-of: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:latest
          ports:
            - containerPort: 80
