10-volume-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: alpine-pod

spec:
  containers:
    - name: alpine-container
      image: apline
      command: ["sleep", "1000"]

      volumeMounts:
        - name: my-volume-server-root
          mountPath: /host

        - name: my-volume-empty-dir-ephemeral
          mountPath: /empty

        - name: nfs-volume-share
          mountPath: /nfs

  volumes:
    - name: my-volume-server-root
      hostPath:
        path: /
        type: Directory

    - name: my-volume-empty-dir-ephemeral
      emptyPath:

    - name: nfs-volume-share
      nfs:
        server: worker-node-01.local
        path: /share
