06-1-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: redis-headless

spec:
  clusterIP: None
  ports:
    - port: 6379
  selector:
    app.kubernates.io/app: redis-app
