07-nextcloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nextcloud-ingress
  labels:
    app.kubernetes.io/app: nextcloud
    app.kubernetes.io/env: develop
    app.kubernetes.io/owner: ahmad
    app.kubernetes.io/part-of: nextcloud
spec:
  defaultBackend:
    service:
      name: nextcloud-service
      port:
        number: 80
  
  ingressClassName: nginx
  tls:
    - hosts:
      - nextcloud.ahmad.io
      secretName: nextcloud.ahmad.io-tls
  rules:
    - host: nextcloud.ahmad.io
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-service
                port:
                  number: 80
